tests/NormalTests/paczka2/big_fuzzy/64690011.err
Error in line 8: LBGLjHQz4 A994 86,4
Error in line 19: A468 S6 32,
Error in line 9: iyEPn A811 91,5
Error in line 28: A468 S116 64,5
Error in line 29: LIdtF S116 81,5
Error in line 45: B2cRfFcveRa A468 3,2
Error in line 30: A468 A811 46,5
Error in line 51: LBGLjHQz4 A468 5,4
Error in line 47: A468 A468 39,6
Error in line 64: LBGLjHQz4 A811 36,3
Error in line 74: smNYGPXoLf A468 91,9
Error in line 77: A468 A468 96,0
Error in line 78: LBGLjHQz4 A468 56,0
Error in line 85: A468 A994 82,4
Error in line 82: LBGLjHQz4 S116 70,0
Error in line 90: B2cRfFcveRa A994 19,3
Error in line 102: LIdtF A811 68,0
Error in line 89: smNYGPXoLf A811 21,1
Error in line 107: A468 S116 24,0
Error in line 116: A468 A994 18,7
Error in line 132: A468 A468 6796
Error in line 131: smNYGPXoLf A811 1,0
Error in line 134: LIdtF A811 83,5
Error in line 140: A468 A468 195,4
Error in line 147: smNYGPXoLf A994 74,6
Error in line 155: B2cRfFcveRa S116 12,0
Error in line 160: B2cRfFcveRa A811 0,7
Error in line 177: HyBEXa4 S116 42,0
Error in line 178: smNYGPXoLf S116 86,7
Error in line 186: B2cRfFcveRa A46 14,4
Error in line 200: HyBEXa4 A468 12,6
Error in line 201: LBGLjHQz4 S116 74,1
Error in line 196: A468 S116 85,3
Error in line 209: A468 A994 32,8
Error in line 203: iyEPn A468 257,4
Error in line 211: LBGLjHQz4 A994 19,8
Error in line 227: iyEPn A994 72,0
Error in line 232: B2cRfFcveRa S116 0,0
Error in line 241: B2cRfFcveRa A811 58,1
Error in line 246: B2cRfFcveRa S116 92,9
